# catlass

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CHANGELOG_en.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  CONTRIBUTORS.md  Dockerfile.atlasa2  Dockerfile.atlasa3  LICENSE  OAT.xml  OWNERS  README.md  README_en.md  SECURITYNOTE.md  SECURITYNOTE_en.md  Third_Party_Open_Source_Software_List.yaml  dependencies.yaml  environment.ascend950.yml  environment.atlasa2.yml  environment.atlasa3.yml  environment.yml  get_cann_version_and_soc_name.cpp  mkdocs.yml  requirements.txt  run.sh  run_single.sh
examples/03_gemm/: CMakeLists.txt  README.md  gemm.cpp
examples/03_gemm/01_fp16_cm_epi_gemm/: CMakeLists.txt  batch_prof.py  batch_prof_data.csv  fp16_cm_epi_gemm.cpp  make.sh  run.sh  run_profiling.sh  test.sh
examples/03_gemm/01_fp16_cm_gemm/: CMakeLists.txt  fp16_cm_gemm.cpp  make.sh  run.sh  test.sh
examples/03_gemm/01_fp16_rm_epi_gemm/: CMakeLists.txt  batch_prof.py  batch_prof_data.csv  fp16_rm_epi_gemm.cpp  gen_params.py  make.sh  run.sh  run_profiling.sh  test.sh
examples/03_gemm/01_fp16_rm_gemm/: CMakeLists.txt  batch_prof.py  fp16_rm_gemm.cpp  make.sh  run.sh  test.sh
examples/03_gemm/02_bf16_cm_epi_gemm/: CMakeLists.txt  batch_prof.py  batch_prof_data.csv  bf16_cm_epi_gemm.cpp  make.sh  run.sh  run_profiling.sh  test.sh
examples/03_gemm/02_bf16_cm_gemm/: CMakeLists.txt  bf16_cm_gemm.cpp  make.sh  run.sh  test.sh
examples/03_gemm/02_bf16_rm_epi_gemm/: CMakeLists.txt  batch_prof.py  bf16_rm_epi_gemm.cpp  make.sh  run.sh  run_profiling.sh  test.sh
examples/03_gemm/02_bf16_rm_gemm/: CMakeLists.txt  batch_prof.py  bf16_rm_gemm.cpp  make.sh  run.sh  test.sh
examples/03_gemm/03_fp32_cm_epi_gemm/: CMakeLists.txt  batch_prof.py  fp32_cm_epi_gemm.cpp  make.sh  run.sh  run_profiling.sh  test.sh
examples/03_gemm/03_fp32_cm_gemm/: CMakeLists.txt  fp32_cm_gemm.cpp  make.sh  run.sh  test.sh
examples/03_gemm/03_fp32_rm_epi_gemm/: CMakeLists.txt  batch_prof.py  fp32_rm_epi_gemm.cpp  make.sh  run.sh  run_profiling.sh  test.sh
examples/03_gemm/03_fp32_rm_gemm/: CMakeLists.txt  batch_prof.py  fp32_rm_gemm.cpp  make.sh  prof.py  run.sh  test.sh
examples/03_gemm/04_int8_cm_epi_gemm/: CMakeLists.txt  batch_prof.py  int8_cm_epi_gemm.cpp  make.sh  run.sh  run_profiling.sh  test.sh
examples/03_gemm/04_int8_cm_gemm/: CMakeLists.txt  batch_prof.py  int8_cm_gemm.cpp  make.sh  run.sh  test.sh
examples/03_gemm/04_int8_rm_epi_gemm/: CMakeLists.txt  batch_prof.py  int8_rm_epi_gemm.cpp  make.sh  run.sh  run_profiling.sh  test.sh
examples/03_gemm/04_int8_rm_gemm/: CMakeLists.txt  batch_prof.py  int8_rm_gemm.cpp  make.sh  run.sh  test.sh
examples/31_dynamic_tiling_matmul/: CMakeLists.txt  dynamic_tiling_matmul.cpp  dynamic_tiling_matmul_half.cpp
examples/31_dynamic_tiling_matmul/impl/: CMakeLists.txt
examples/31_dynamic_tiling_matmul/include/: adjust_tiling.h  adjust_tiling_b16.h  base_info.h  catlass_matmul.h  get_tiling.h  platform_info.h  select_kernel.h  select_kernel_half.h  tiling.h  tiling_params.h  utils.h
examples/64_ascend950_matmul_evg/: CMakeLists.txt  README.md  matmul_evg_add.cpp  matmul_evg_add_ub.cpp  matmul_evg_bias.cpp  matmul_evg_leaky_relu.cpp  matmul_evg_sigmoid.cpp  matmul_evg_silu.cpp  matmul_evg_tanh.cpp
examples/python_extension/: AscendCTKernelWrapper.cpp  AscendCTKernelWrapper.h  CMakeLists.txt  README.md  README_en.md  act_kernel_wrapper.cpp  catlass_kernel_wrapper.cpp  pybind_bindings.cpp  pyproject.toml  setup.py  torch_bindings.cpp  usage.md
examples/python_extension/tests/: test_python_extension.py
examples/python_extension/torch_act/: __init__.py
examples/python_extension/torch_catlass/: __init__.py
python/catlass_cppgen/: README.md  pyproject.toml
python/catlass_cppgen/catlass_cppgen/: __init__.py  _version.py
python/catlass_cppgen/docs/: evg_api.md  kernel_api.md  optensor_api.md
python/tla_dsl/: .gitignore  Dockerfile  README.md  build-docker.sh  build.sh  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
python/tla_dsl/catlass/: __init__.py  _tla_type_bridge.py  address_space.py  compiler_bridge.py  core_api.py  dsl.py  execution.py  execution_lowering.py  execution_triton.py  mixed_kernel_attrs.py  params.py  runtime.py  test_bootstrap.py  tla_ast_decorators.py  types.py
python/tla_dsl/docs/: api-reference.md  index.md
python/tla_dsl/scripts/: build_wheels.sh
python/tla_dsl/tests/: _bootstrap.py  conftest.py  debug_print_hivmc_abi.py  test_arange_op.py  test_arch_metadata.py  test_atomic_add.py  test_bitwise_ops.py  test_copy_lowering.py  test_core_api_preconditions.py  test_cross_flag_two_way_example.py  test_debug_print_frontend.py  test_dlpack_bridge.py  test_eager_op_capture.py  test_execution_hivm_runtime.py  test_execution_lowering.py  test_framework_overview_interfaces.py  test_frontend_branching.py  test_frontend_for_range.py  test_frontend_lowering.py  test_frontend_parity_stability.py  test_frontend_while.py  test_frontend_with.py  test_generated_ops_surface.py  test_load_unalign_op.py  test_local_mem_bar.py  test_location_handling.py  test_logic_ops.py  test_make_tensor.py  test_mask_logic_ops.py  test_numeric_arith.py  test_numeric_as_index.py  test_numeric_ast_compare.py  test_numeric_int32_user_index.py  test_numeric_range.py  test_pretest_bootstrap.py  test_runtime_dynamic_exports.py  test_scalar_lane_broadcast.py  test_scalar_packing.py  test_squeeze_op.py  test_store_unalign_op.py  (+14 more)
python/tla_dsl/tools/: generate_api_reference.py  generate_tla_python_bindings.py
tests/catlass_test/: .coverage  _catlass_test_tmp  pyproject.toml
tests/catlass_test/catlass_test/: __init__.py
tests/catlass_test/examples/: custom_matmul.cpp
tests/catlass_test/tests/: test_compiler.py
tests/optest/: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
tests/optest/cmake/: jit_verify_template.cmake
tests/optest/docs/: design.md
tests/optest/include/: catlass_kernel.h  (+3 more)
tests/unittest/: CMakeLists.txt
(+4570 files in other folders)
