[build-system]
requires = ["scikit-build-core>=0.8.0"]
build-backend = "scikit_build_core.build"

[project]
name = "torch-catlass"
version = "0.1.0"
description = "Catlass-based PyTorch NPU operators with multi-architecture support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs",
    "cython",
    "numpy>=2.4.4",
    "decorator",
    "sympy",
    "cffi",
    "pyyaml>=6.0.3",
    "pathlib2",
    "psutil",
    "protobuf==3.20.0",
    "scipy",
    "requests",
    "absl-py",
    "torch>=2.0.0",
    "torch-npu>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.scikit-build]
cmake.version = ">=3.16"
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
]
ninja.make-fallback = true
wheel.packages = ["torch_catlass"]
wheel.install-dir = "torch_catlass"
editable.rebuild = false
editable.verbose = false

[tool.scikit-build.cmake.define]
CATLASS_ARCH_LIST = {env = "CATLASS_ARCH_LIST", default = "2201;3510"}
CATLASS_KERNEL_LIST = {env = "CATLASS_KERNEL_LIST", default = ""}

[tool.uv]
no-build-isolation-package = ["torch-catlass"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
